Fixed floating border on sidebar collapse

--- a/code/style.sass
+++ b/code/style.sass
@@ -437,10 +437,10 @@ nav#topnav
 	border-image: lg(bottom, 'currentColor, transparent')
 	border-image-slice: 1
 	border-right: solid 1px
-.page:not(.content-only) .content
-	border-image: lg(bottom, 'currentColor, transparent')
-	border-image-slice: 1
-	border-left: solid 1px
+// .page:not(.content-only) .content
+// 	border-image: lg(bottom, 'currentColor, transparent')
+// 	border-image-slice: 1
+// 	border-left: solid 1px
 
 // # ----------------------------------------
 // # Text
